k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odrl
  labels:
    app.kubernetes.io/part-of: odrl-translator
